# JobDoc

./: .gitignore  CMakeLists.txt  CMakeSettings.json  CMakeUserPresets.json  Doxyfile  Doxyfile.in  find_str_tfunc.cpp  job.cpp  job.h  job_group.cpp  job_group.h  job_proc.cpp  job_proc.h  main.cpp  menu.cpp  menu.h  sdl_jobs_2023-02-03.dsv  tokenizer.cpp  vcpkg.C.Dev.Libs.vcpkg.1.0.0.nupkg  vcpkg.json  version.h  version.h.in
ORM/: jobdoc.xml
ORM/include/asarum/BY/: AdtnData.h  EntySelCta.h  JobDef.h  SchdDetl.h
ORM/src/: AdtnData.cpp  EntySelCta.cpp  JobDef.cpp
SQL/: enty_sel_cta.sql  job_defn_t.sql  job_sel_cta_sql  schd_detl_t.sql
doc/html/: _adtn_data_8h_source.html  _base_connector_8h.html  _base_connector_8h_source.html  _data_copier_8h_source.html  _doc_writer_8h_source.html  _enty_sel_cta_8h_source.html  _find_str_t_func.html  _find_str_t_func_8h_source.html  _job_def_8h_source.html  _job_def_getter_8h_source.html  _job_script_writer_8h_source.html  _job_sel_cta_8h_source.html  _menu_8h.html  _menu_8h_source.html  _o_r_m_2include_2asarum_2_b_y_2_adtn_data_8h_source.html  _o_r_m_2include_2asarum_2_b_y_2_enty_sel_cta_8h_source.html  _o_r_m_2include_2asarum_2_b_y_2_job_def_8h_source.html  _o_r_m_2include_2asarum_2_b_y_2_job_sel_cta_8h_source.html  _o_r_m_2include_2asarum_2_b_y_2_schd_detl_8h_source.html  _odbc_connector_8h_source.html  _s_q_lite_connector_8h_source.html  _tokenizer_8h.html  _tokenizer_8h_source.html  annotated.html  class_gui_doc-members.html  class_gui_doc.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_adtn_data_01_4-members.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_adtn_data_01_4.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_enty_sel_cta_01_4-members.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_enty_sel_cta_01_4.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_job_def_01_4-members.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_job_def_01_4.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_job_sel_cta_01_4-members.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_job_sel_cta_01_4.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_schd_detl_01_4-members.html  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_schd_detl_01_4.html  class_test-members.html  class_test.html  classasarum_1_1_b_y_1_1_adtn_data-members.html  classasarum_1_1_b_y_1_1_adtn_data.html  (+108 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  enums_0.js  files_0.js  files_2.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+9 more)
doc/latex/: _adtn_data_8h_source.tex  _base_connector_8h.tex  _base_connector_8h_source.tex  _data_copier_8h_source.tex  _doc_writer_8h_source.tex  _enty_sel_cta_8h_source.tex  _find_str_t_func.tex  _find_str_t_func_8h_source.tex  _job_def_8h_source.tex  _job_def_getter_8h_source.tex  _job_script_writer_8h_source.tex  _job_sel_cta_8h_source.tex  _menu_8h.tex  _menu_8h_source.tex  _o_r_m_2include_2asarum_2_b_y_2_adtn_data_8h_source.tex  _o_r_m_2include_2asarum_2_b_y_2_enty_sel_cta_8h_source.tex  _o_r_m_2include_2asarum_2_b_y_2_job_def_8h_source.tex  _o_r_m_2include_2asarum_2_b_y_2_job_sel_cta_8h_source.tex  _o_r_m_2include_2asarum_2_b_y_2_schd_detl_8h_source.tex  _odbc_connector_8h_source.tex  _s_q_lite_connector_8h_source.tex  _tokenizer_8h.tex  _tokenizer_8h_source.tex  annotated.tex  class_gui_doc.eps  class_gui_doc.tex  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_adtn_data_01_4.tex  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_enty_sel_cta_01_4.tex  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_job_def_01_4.tex  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_job_sel_cta_01_4.tex  class_poco_1_1_data_1_1_type_handler_3_01asarum_1_1_b_y_1_1_schd_detl_01_4.tex  class_test.tex  classasarum_1_1_b_y_1_1_adtn_data.eps  classasarum_1_1_b_y_1_1_adtn_data.tex  classasarum_1_1_b_y_1_1_base_connector.eps  classasarum_1_1_b_y_1_1_base_connector.tex  classasarum_1_1_b_y_1_1_data_copier.tex  classasarum_1_1_b_y_1_1_doc_writer.tex  classasarum_1_1_b_y_1_1_enty_sel_cta.eps  classasarum_1_1_b_y_1_1_enty_sel_cta.tex  (+66 more)
docs/: CMakeLists.txt  Doxyfile.in
include/: db_queries.h  find_str_tfunc.h  menu.h  sql_queries.h  sqlite_connector.h  test.h  version.h
include/asarum/BY/: AdtnData.h  BaseConnector.h  CodeWriter.h  Config.h  DataCopier.h  DocWriter.h  EntySelCta.h  EscValidator.h  JobDef.h  JobDefGetter.h  JobScriptWriter.h  JobSelCta.h  Menu.h  Meter.h  OdbcConnector.h  SQLiteConnector.h  SchdDetl.h  Tokenizer.h  job.h  job_def.h  job_def_getter.h  job_group.h  job_proc.h  menu.h  odbc_connector.h  sql_queries.h  sqlite_connector.h
src/: AdtnData.cpp  BaseConnector.cpp  CodeWriter.cpp  Config.cpp  DataCopier.cpp  DocWriter.cpp  EscValidator.cpp  FindStrTFunc.cpp  JobDef.cpp  JobDefGetter.cpp  JobScriptWriter.cpp  JobSelCta.cpp  Menu.cpp  Meter.cpp  OdbcConnector.cpp  SQLiteConnector.cpp  SchdDetl.cpp  Tokenizer.cpp  db_caller.cpp  db_caller.h  db_queries.cpp  db_queries.h  find_str_tfunc.cpp  find_str_tfunc.h  job.cpp  job.h  job_def_getter.cpp  job_group.cpp  job_group.h  job_proc.cpp  job_proc.h  jobdoc.cpp  main.cpp  menu.cpp  menu.h  odbc_connector.cpp  odbc_connector.h  sql_queries.h  sqlite_connector.cpp  sqlite_connector.h  (+4 more)
src/GUI/: CMakeLists.txt  gui_main.cpp  gui_main.h  main_window.cpp  main_window.h
src/dbConnect/: CMakeLists.txt  con-def.h  connector.cpp  connector.h  orcl-con-def.cpp  orcl-con-def.h  queries.h
test/: CMakeLists.txt  first_test.cpp
